improve: files orgnization
